--- a/taxi-user-local.yml
+++ b/taxi-user-local.yml
@@ -8,26 +8,12 @@ spring:
         date-format: yyyy-MM-dd HH:mm:ss
         time-zone: GMT+8
     datasource:
-        name: datasource-taxi-user
         url: jdbc:mysql://127.0.0.1:3306/taxi-user?useUnicode=true&characterEncoding=UTF8
         username: root
         password: 123456
-        # 使用druid数据源
+        # 使用Hikari数据源
         type: com.zaxxer.hikari.HikariDataSource
         driver-class-name: com.mysql.jdbc.Driver
-        filters: stat
-        maxActive: 20
-        initialSize: 1
-        maxWait: 60000
-        minIdle: 1
-        timeBetweenEvictionRunsMillis: 60000
-        minEvictableIdleTimeMillis: 300000
-        validationQuery: select 'x'
-        testWhileIdle: true
-        testOnBorrow: false
-        testOnReturn: false
-        poolPreparedStatements: true
-        maxOpenPreparedStatements: 20
 mybatis:
     basepackage: com.yoogurt.taxi.**.dal.**.mapper
     xmlLocation: classpath:mapper/**/*.xml
