--- a/taxi-user-local.yml
+++ b/taxi-user-local.yml
@@ -1,2 +1,13 @@
 server:
   port: 8100
+spring:
+  jackson:
+      date-format: yyyy-MM-dd HH:mm:ss
+      time-zone: GMT+8
+    datasource:
+      url: jdbc:mysql://127.0.0.1:3306/taxi-user?useUnicode=true&characterEncoding=UTF8
+      username: root
+      password: 123456
+      # 使用Hikari数据源
+      type: com.zaxxer.hikari.HikariDataSource
+      driver-class-name: com.mysql.jdbc.Driver
