--- a/taxi-user-local.yml
+++ b/taxi-user-local.yml
@@ -13,3 +13,7 @@ spring:
     # 使用Hikari数据源
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
+eureka:
+  client:
+    service-url:
+      defaultZone: http://peer2:8761/eureka
