--- a/auth-center-local.yml
+++ b/auth-center-local.yml
@@ -4,3 +4,7 @@ spring:
   jackson:
       date-format: yyyy-MM-dd HH:mm:ss
       time-zone: GMT+8
+eureka:
+  client:
+    service-url:
+      defaultZone: http://peer2:8761/eureka
