--- a/taxi-order-local.yml
+++ b/taxi-order-local.yml
@@ -2,7 +2,7 @@ server:
   port: 8101
 spring:
   application:
-    name: taxi-user
+    name: taxi-order
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
