--- a/taxi-finance-local.yml
+++ b/taxi-finance-local.yml
@@ -7,7 +7,7 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/taxi-account?useUnicode=true&characterEncoding=UTF8
+    url: jdbc:mysql://127.0.0.1:3306/taxi-finance?useUnicode=true&characterEncoding=UTF8
     username: root
     password: 123456
     # 使用Hikari数据源
