--- a/auth-center-local.yml
+++ b/auth-center-local.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8101
+  port: 8108
 spring:
   jackson:
       date-format: yyyy-MM-dd HH:mm:ss
@@ -8,3 +8,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://peer2:8761/eureka
+feign:
+  compression:
+    request:
+      mime-types: text/xml,application/xml,application/json
+      min-request-size: 2048
