--- a/auth-center-local.yml
+++ b/auth-center-local.yml
@@ -1,9 +1,18 @@
 server:
   port: 8108
 spring:
+  application:
+    name: auth-center
   jackson:
-      date-format: yyyy-MM-dd HH:mm:ss
-      time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/auth-center?useUnicode=true&characterEncoding=UTF8
+    username: root
+    password: 123456
+    # 使用Hikari数据源
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: com.mysql.jdbc.Driver
 eureka:
   client:
     service-url:
