--- a/auth-center-local.yml
+++ b/auth-center-local.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: auth-center
+  thymeleaf:
+    mode: LEGACYHTML5
+    cache: false
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
