--- a/auth-center-local.yml
+++ b/auth-center-local.yml
@@ -6,6 +6,8 @@ spring:
   thymeleaf:
     mode: LEGACYHTML5
     cache: false
+    prefix: classpath:/templates/
+    suffix: .html
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
