--- a/taxi-gateway-local.yml
+++ b/taxi-gateway-local.yml
@@ -1,9 +1,42 @@
 server:
   port: 11111
+spring:
+  application:
+    name: taxi-gateway
+  thymeleaf:
+    mode: LEGACYHTML5
+    cache: false
+    prefix: classpath:/templates/
+    suffix: .html
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/auth-center?useUnicode=true&characterEncoding=UTF8
+    username: root
+    password: 123456
+    # 使用Hikari数据源
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: com.mysql.jdbc.Driver
 eureka:
   client:
     service-url:
-      defaultZone: http://peer1:8761/eureka
+      defaultZone: http://peer2:8761/eureka
+feign:
+  compression:
+    request:
+      mime-types: text/xml,application/xml,application/json
+      min-request-size: 2048
+gate:
+  ignore:
+    startWith: /static
+    contain: .
+  oauth:
+    prefix: /jwt
+  jwt:
+    secret: taxi123456
+    expiration: 7200
+    header: access-token
 zuul:
   routes:
     user:
