--- a/taxi-gateway-local.yml
+++ b/taxi-gateway-local.yml
@@ -39,6 +39,9 @@ gate:
     header: access-token
 zuul:
   routes:
+    registry:
+      path: /*/registry/**
+      serviceId: taxi-gateway
     user:
       path: /*/user/**
       serviceId: taxi-user
