--- a/taxi-gateway-local.yml
+++ b/taxi-gateway-local.yml
@@ -17,7 +17,7 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/auth-center?useUnicode=true&characterEncoding=UTF8
+    url: jdbc:mysql://127.0.0.1:3306/taxi-gateway?useUnicode=true&characterEncoding=UTF8
     username: root
     password: 123456
     # 使用Hikari数据源
