--- a/taxi-user-local.yml
+++ b/taxi-user-local.yml
@@ -3,6 +3,11 @@ server:
 spring:
   application:
     name: taxi-user
+  redis:
+      host: 192.168.0.222
+      port: 6370
+      password: taxi0
+      timeout: 1800000
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
