--- a/taxi-user-local.yml
+++ b/taxi-user-local.yml
@@ -12,7 +12,7 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   datasource:
-    url: jdbc:mysql://192.168.0.222:3306/taxi-gateway?useUnicode=true&characterEncoding=UTF8
+    url: jdbc:mysql://192.168.0.222:3306/taxi-user?useUnicode=true&characterEncoding=UTF8
     username: root
     password: taxi123456
     # 使用Hikari数据源
