--- a/registry-local.yml
+++ b/registry-local.yml
@@ -1,2 +1,13 @@
 server:
   port: 10000
+spring:
+  cloud:
+    config:
+      uri: http://127.0.0.1:9998
+      fail-fast: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://peer2:10001/eureka/
+  instance:
+    hostname: peer1
