--- a/registry-local-replica-1.yml
+++ b/registry-local-replica-1.yml
@@ -1,2 +1,8 @@
 server:
   port: 10001
+eureka:
+  client:
+    service-url:
+      defaultZone: http://peer1:10000/eureka/
+  instance:
+    hostname: peer2
