--- a/taxi-system-local.yml
+++ b/taxi-system-local.yml
@@ -7,7 +7,7 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   datasource:
-    url: jdbc:mysql://192.168.0.222:3306/taxi-system?useUnicode=true&characterEncoding=UTF8
+    url: jdbc:mysql://192.168.0.222:3306/taxi-system?useUnicode=true&characterEncoding=UTF8&useSSL=false
     username: root
     password: taxi123456
     # 使用Hikari数据源
