--- a/taxi-order-local.yml
+++ b/taxi-order-local.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: taxi-order
   jackson:
-    date-format: yyyy-MM-dd HH:mm:ss
+    date-format: yyyy-MM-dd HH:mm
     time-zone: GMT+8
   datasource:
     url: jdbc:mysql://192.168.0.222:3306/taxi-order?useUnicode=true&characterEncoding=UTF8&useSSL=false
