--- a/taxi-account-local.yml
+++ b/taxi-account-local.yml
@@ -3,6 +3,13 @@ server:
 spring:
   application:
     name: taxi-account
+  rabbitmq:
+    host: 192.168.0.222
+    port: 5672
+    connection-timeout: 7000
+    virtual-host: /
+    username: root
+    password: taxi123456
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
