--- a/taxi-finance-test.yml
+++ b/taxi-finance-test.yml
@@ -15,6 +15,14 @@ spring:
       port: 6370
       password: taxi0
       timeout: 1800000
+  data:
+    mongodb:
+      host: 120.55.42.113
+      port: 27334
+      database: finance
+      authenticationDatabase: finance
+      username: finance
+      password: (Finance0)
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
