--- a/taxi-system-test.yml
+++ b/taxi-system-test.yml
@@ -3,6 +3,13 @@ server:
 spring:
   application:
     name: taxi-system
+  rabbitmq:
+    host: 120.55.42.113
+    port: 5672
+    connection-timeout: 7000
+    virtual-host: /
+    username: root
+    password: taxi123456
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
