--- a/taxi-gateway-local.yml
+++ b/taxi-gateway-local.yml
@@ -42,6 +42,8 @@ feign:
     request:
       mime-types: text/xml,application/xml,application/json
       min-request-size: 2048
+  hystrix:
+    enabled: false
 zuul:
   max:
     host:
