--- a/taxi-finance-local.yml
+++ b/taxi-finance-local.yml
@@ -40,3 +40,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://peer1:10000/eureka
+  instance:
+      prefer-ip-address: true
+      instance-id: ${spring.application.name}:${spring.application.instance_id:${server.port}}
