--- a/taxi-gateway-local.yml
+++ b/taxi-gateway-local.yml
@@ -37,6 +37,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://peer1:10000/eureka
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${server.port}}
 feign:
   compression:
     request:
