--- a/taxi-gateway-local.yml
+++ b/taxi-gateway-local.yml
@@ -3,6 +3,10 @@ server:
 spring:
   application:
     name: taxi-gateway
+  cloud:
+    loadbalancer:
+      retry:
+        enabled: true
   redis:
       host: 192.168.0.222
       port: 6370
@@ -48,12 +52,13 @@ feign:
   hystrix:
     enabled: false
 zuul:
+  retryable: true
   max:
     host:
       connections: 500
   host:
-    socket-timeout-millis: 70000
-    connect-timeout-millis: 70000
+    socket-timeout-millis: 30000
+    connect-timeout-millis: 30000
   routes:
     user:
       path: /*/user/**
@@ -79,100 +84,58 @@ hystrix:
             execution:
                 isolation:
                     thread:
-                        timeoutInMilliseconds: 50000
+                        timeoutInMilliseconds: 20000
 taxi-user:
   ribbon:
-    ReadTimeout: 60000
-    ConnectTimeout: 60000
+    ReadTimeout: 15000
+    ConnectTimeout: 15000
     MaxAutoRetries: 2
     MaxAutoRetriesNextServer: 3
     OkToRetryOnAllOperations: true
     eureka:
       enabled: true
-#  hystrix:
-#    command:
-#      default:
-#        execution:
-#          isolation:
-#            thread:
-#              timeoutInMilliseconds: 50000
 taxi-account:
   ribbon:
-    ReadTimeout: 60000
-    ConnectTimeout: 60000
+    ReadTimeout: 15000
+    ConnectTimeout: 15000
     MaxAutoRetries: 2
     MaxAutoRetriesNextServer: 3
     OkToRetryOnAllOperations: true
     eureka:
       enabled: true
-#  hystrix:
-#      command:
-#        default:
-#          execution:
-#            isolation:
-#              thread:
-#                timeoutInMilliseconds: 50000
 taxi-order:
   ribbon:
-    ReadTimeout: 60000
-    ConnectTimeout: 60000
+    ReadTimeout: 15000
+    ConnectTimeout: 15000
     MaxAutoRetries: 2
     MaxAutoRetriesNextServer: 3
     OkToRetryOnAllOperations: true
     eureka:
       enabled: true
-#  hystrix:
-#      command:
-#        default:
-#          execution:
-#            isolation:
-#              thread:
-#                timeoutInMilliseconds: 50000
 taxi-system:
   ribbon:
-    ReadTimeout: 60000
-    ConnectTimeout: 60000
+    ReadTimeout: 15000
+    ConnectTimeout: 15000
     MaxAutoRetries: 2
     MaxAutoRetriesNextServer: 3
     OkToRetryOnAllOperations: true
     eureka:
       enabled: true
-#  hystrix:
-#      command:
-#        default:
-#          execution:
-#            isolation:
-#              thread:
-#                timeoutInMilliseconds: 50000
 taxi-finance:
   ribbon:
-    ReadTimeout: 60000
-    ConnectTimeout: 60000
+    ReadTimeout: 15000
+    ConnectTimeout: 15000
     MaxAutoRetries: 2
     MaxAutoRetriesNextServer: 3
     OkToRetryOnAllOperations: true
     eureka:
       enabled: true
-#  hystrix:
-#      command:
-#        default:
-#          execution:
-#            isolation:
-#              thread:
-#                timeoutInMilliseconds: 50000
 taxi-notification:
   ribbon:
-    ReadTimeout: 60000
-    ConnectTimeout: 60000
+    ReadTimeout: 15000
+    ConnectTimeout: 15000
     MaxAutoRetries: 2
     MaxAutoRetriesNextServer: 3
     OkToRetryOnAllOperations: true
     eureka:
       enabled: true
-#  hystrix:
-#      command:
-#        default:
-#          execution:
-#            isolation:
-#              thread:
-#                timeoutInMilliseconds: 50000
