--- a/taxi-gateway-local.yml
+++ b/taxi-gateway-local.yml
@@ -50,7 +50,7 @@ feign:
       mime-types: text/xml,application/xml,application/json
       min-request-size: 2048
   hystrix:
-    enabled: false
+    enabled: true
 zuul:
   retryable: true
   max:
