--- a/taxi-finance-local.yml
+++ b/taxi-finance-local.yml
@@ -36,6 +36,9 @@ spring:
     # 使用Hikari数据源
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
+feign:
+  hystrix:
+    enabled: true
 eureka:
   client:
     service-url:
