--- a/registry-local-replica-1.yml
+++ b/registry-local-replica-1.yml
@@ -6,3 +6,5 @@ eureka:
       defaultZone: http://peer1:10000/eureka/
   instance:
     hostname: peer2
+  server:
+      eviction-interval-timer-in-ms: 21000       # 续期时间，即扫描失效服务的间隔时间（缺省为60*1000ms）
