--- a/taxi-finance-local.yml
+++ b/taxi-finance-local.yml
@@ -43,3 +43,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://peer1:10000/eureka
+  instance:
+    lease-renewal-interval-in-seconds: 10     # 心跳时间，即服务续约间隔时间（缺省为30s）
+    lease-expiration-duration-in-seconds: 20  # 发呆时间，即服务续约到期时间（缺省为90s）
