修改本地feign的hystrix超时时间设置

--- a/taxi-finance-local.yml
+++ b/taxi-finance-local.yml
@@ -39,6 +39,12 @@ spring:
 feign:
   hystrix:
     enabled: true
+    command:
+      default:
+        execution:
+          isolation:
+            thread:
+              timeoutInMilliseconds: 3000
 eureka:
   client:
     service-url:
