--- a/taxi-account-local.yml
+++ b/taxi-account-local.yml
@@ -34,6 +34,12 @@ spring:
 feign:
   hystrix:
     enabled: true
+    command:
+      default:
+        execution:
+          isolation:
+            thread:
+              timeoutInMilliseconds: 3000
 eureka:
   client:
     service-url:
