--- a/taxi-notification-local.yml
+++ b/taxi-notification-local.yml
@@ -43,6 +43,12 @@ spring:
 feign:
   hystrix:
     enabled: true
+    command:
+      default:
+        execution:
+          isolation:
+            thread:
+              timeoutInMilliseconds: 3000
 eureka:
   client:
     service-url:
