--- a/taxi-system-local.yml
+++ b/taxi-system-local.yml
@@ -26,6 +26,12 @@ spring:
 feign:
   hystrix:
     enabled: true
+    command:
+      default:
+        execution:
+          isolation:
+            thread:
+              timeoutInMilliseconds: 3000
 eureka:
   client:
     service-url:
