--- a/taxi-user-local.yml
+++ b/taxi-user-local.yml
@@ -31,6 +31,12 @@ spring:
 feign:
   hystrix:
     enabled: true
+    command:
+      default:
+        execution:
+          isolation:
+            thread:
+              timeoutInMilliseconds: 3000
 eureka:
   client:
     service-url:
