修改本地feign的hystrix超时时间设置

--- a/taxi-gateway-local.yml
+++ b/taxi-gateway-local.yml
@@ -79,13 +79,13 @@ zuul:
     system:
       path: /*/system/**
       serviceId: taxi-system
-hystrix:
-    command:
-        default:
-            execution:
-                isolation:
-                    thread:
-                        timeoutInMilliseconds: 2000
+#hystrix:
+#    command:
+#        default:
+#            execution:
+#                isolation:
+#                    thread:
+#                        timeoutInMilliseconds: 2000
 taxi-user:
   ribbon:
     ReadTimeout: 15000
