--- a/taxi-gateway-local.yml
+++ b/taxi-gateway-local.yml
@@ -27,6 +27,9 @@ spring:
     cache: false
     prefix: classpath:/templates/
     suffix: .html
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
   datasource:
     url: jdbc:mysql://192.168.0.222:3306/taxi-gateway?useUnicode=true&characterEncoding=UTF8&useSSL=false
     username: root
